--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="checkout.js" defer></script>
   </head>
   <body>
     <app-root></app-root>
